# Sonos-WEB-APIs

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  pyproject.toml  readme.md
docs/source/: api.rst  conf.py  getting-started.rst  index.rst  robots.txt
sonos_web_apis/: audioclip.py  exceptions.py  households.py  oauth.py  types.py  utils.py
tests/: test_sonos_cloud.py
