[tool.poetry]
name = "Sonos_WEB_APIs"
version = "0.1.0"
description = "A python wrapper around the Sonos Cloud/web APIs"
authors = ["NicklasTegner <NicklasMCHD@live.dk>"]
license = "mit"
readme = "readme.md"
repository = "https://github.com/NicklasTegner/Sonos-WEB-APIs"
homepage = "https://sonoswebapis.rtd.org"
documentation = "https://sonos-web-apis.readthedocs.io/en/latest/"
keywords = ["sonos", "sonos cloud", "sonos api", "soco"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
sphinx = {version="^4.4.0", optional=true}
sphinx-sitemap = {version="^2.2.0", optional=true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-sitemap"]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

